# Vibe-Genomer

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  PROJECT_STRUCTURE.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
config/: default.yaml  development.yaml  production.yaml
docs/: index.md
tests/: __init__.py  conftest.py
tests/fixtures/: README.md
tests/integration/: __init__.py  test_end_to_end.py
tests/unit/: test_agent.py  test_tools.py  test_utils.py  test_verification.py
vibe_genomer/: __init__.py  main_package_init.py
vibe_genomer/agent/: README.md  __init__.py  core.py  executor.py  planner.py  react_loop.py  state_machine.py
vibe_genomer/cli/: __init__.py  main.py  repl.py
vibe_genomer/cli/commands/: __init__.py  analyze.py  auth.py  update.py
vibe_genomer/knowledge/: README.md  __init__.py
vibe_genomer/knowledge/clinvar/: __init__.py
vibe_genomer/knowledge/ensembl/: __init__.py
vibe_genomer/knowledge/ucsc/: __init__.py
vibe_genomer/models/: __init__.py  anthropic.py  base.py  local.py  openai.py
vibe_genomer/parsers/: README.md  __init__.py  bam.py  base.py  fastq.py  vcf.py
vibe_genomer/rag/: README.md  __init__.py
vibe_genomer/sandbox/: README.md  __init__.py
vibe_genomer/tools/: README.md  __init__.py  base.py
vibe_genomer/tools/samtools/: __init__.py  index.py  stats.py  view.py
vibe_genomer/utils/: __init__.py  config.py  decorators.py  exceptions.py  logging.py
vibe_genomer/verification/: README.md  __init__.py  base.py  constraints.py  coordinate_validator.py  reference_checker.py  variant_validator.py
vibe_genomer/workflows/: README.md  __init__.py
